# cpp_indie_studio

./: Makefile
Cmake/: CMakeLists.txt
assets/: CMakeLists.txt
assets/box/bomb/: Bomb.x  Bombold.x
assets/character/: Bomberman.x
assets/font/: font.xml  font2.xml  font3.xml
assets/map/: map.save  map.txt  save_map.txt
include/: CBox.hpp  CCharacter.hpp  CEventReceiver.hpp  CGame.hpp  CMap.hpp  CMenu.hpp  CSound.hpp  CTimer.hpp  core.hpp
srcs/: CBox.cpp  CCharacter.cpp  CEventReceiver.cpp  CGame.cpp  CMap.cpp  CMenu.cpp  CSound.cpp  CTimer.cpp  core.cpp  main.cpp
